добавил userService (не полностью)
