# internal/usersService/models.go
@@ -1,0 +1,9 @@
+package usersService
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Email    string `json:"email" gorm:"uniqueIndex;not null"`
+	Password string `json:"password" gorm:"not null"`
+}
