# openapi/openapi.yaml
@@ -2,7 +2,6 @@ openapi: 3.0.3
 info:
   title: Task API
   version: 1.0.0
-
 paths:
   /tasks:
     post:
@@ -36,7 +35,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
     get:
       summary: Get all tasks
       tags:
@@ -57,7 +55,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
   /tasks/{id}:
     put:
       summary: Update a task by ID
@@ -89,20 +86,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '404':
           description: Task not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
       summary: Delete a task by ID
       tags:
@@ -129,10 +124,103 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
+  /users:
+    post:
+      summary: Create a new user
+      tags:
+        - Users
+      operationId: createUser
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUserRequest'
+      responses:
+        '201':
+          description: User created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    get:
+      summary: Get all users
+      tags:
+        - Users
+      operationId: getAllUsers
+      responses:
+        '200':
+          description: Get all users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /users/{id}:
+    put:
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      summary: Update user
+      tags:
+        - Users
+      operationId: updateUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserRequest'
+      responses:
+        '200':
+          description: User updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
-
     Task:
       type: object
       properties:
@@ -145,10 +233,9 @@ components:
         is_done:
           type: boolean
       required:
-            - id
-            - title
-            - is_done
-
+        - id
+        - title
+        - is_done
     TaskUpdateInput:
       type: object
       properties:
@@ -160,7 +247,6 @@ components:
       required:
         - title
         - is_done
-
     TaskCreateInput:
       type: object
       properties:
@@ -172,7 +258,43 @@ components:
       required:
         - title
         - is_done
-
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          minimum: 0
+        email:
+          type: string
+        password:
+          type: string
+          writeOnly: true
+    CreateUserRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+          minLength: 6
+          writeOnly: true
+    UpdateUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+          minLength: 6
+          writeOnly: true
     Error:
       type: object
       required:
@@ -180,5 +302,4 @@ components:
       properties:
         error:
           type: string
-          example: "Invalid request"
-
+          example: Invalid request
